--- a/best-glasses-for-roundface/new-style.css
+++ b/best-glasses-for-roundface/new-style.css
@@ -7,10 +7,12 @@
 }
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  /* padding: 20px; */
   row-gap: 50px;
   column-gap: 10px;
+  margin-top: 2em;
+  margin-right: 1rem;
 }
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
@@ -28,10 +30,14 @@ h1 {
   margin: 10px 2.5em;
 }
 p {
-  padding: 0 2.6rem;
+  /* padding: 0 2.6rem; */
   text-align: left;
   margin-top: 1rem;
   font-weight: 300;
+}
+.para-content {
+  padding: 0 2.6rem;
+  line-height: 1.8em;
 }
 
 .booknow {
@@ -113,20 +119,24 @@ ol {
 }
 
 .card-wrapper {
-  width: 50rem;
-  height: 70rem;
+  width: 5rem;
+  height: 15rem;
   display: grid;
-  place-items: center;
-  padding: 0 10rem;
+  /* place-items: center; */
+  padding: 0 3.5rem;
   overflow: hidden;
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+
+  /* margin-left: 0.5rem; */
 }
 
 .card {
-  width: 33rem;
-  height: 30rem;
+  width: 16.5rem;
+  height: 15rem;
   background: transparent;
-  border-radius: 2.5rem;
-  box-shadow: 0 2rem 6rem rgb(0, 0, 0, 0.7);
+  border-radius: 1.3rem;
+  box-shadow: 0 1rem 3rem rgb(0, 0, 0, 0.7);
   position: absolute;
 }
 
@@ -134,8 +144,23 @@ ol {
   width: 100%;
   height: 100%;
   background-color: #1c477a;
-  padding: 3rem;
-  border-radius: 2.5rem;
+  padding: 1.5rem;
+  border-radius: 1.3rem;
+}
+.square-card {
+  background-color: #474545;
+}
+.geometric-card {
+  background-color: #e691c8;
+}
+.cateye-card {
+  background-color: #b4ac57;
+}
+.full-rimmed-card {
+  background-color: #e4a75c;
+}
+.browline-card {
+  background-color: #5a8df3;
 }
 
 .container.change .top-card {
@@ -143,26 +168,34 @@ ol {
 }
 
 .logo {
-  width: 8rem;
-  margin-bottom: 2rem;
+  width: 4rem;
+  margin-bottom: 1rem;
 }
 
 .top-card-text {
   color: #fff;
+  text-align: center;
+  font-size: medium;
+  margin-top: 1rem;
 }
-
+.top-card-text p {
+  text-align: center;
+}
 .top-card-text h1 {
   text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 0.1rem;
-  margin-bottom: 1rem;
+  font-weight: 700;
+  margin: 0 auto;
+  margin-top: -1rem;
+  font-size: large;
+  /* letter-spacing: 0.1rem; */
+  /* margin-bottom: 0.5rem; */
 }
 
 .shoe-1 {
-  width: 30rem;
+  width: 15rem;
   position: absolute;
-  top: -2rem;
-  right: -9rem;
+  top: -1.5rem;
+  right: -7rem;
   /* transition: transform 0.5s; */
   transform: rotate(-15deg);
 }
@@ -174,3 +207,36 @@ ol {
 /* section p {
   margin-top: 1rem;
 } */
+ul li::marker {
+  content: "✔";
+  color: #097123;
+}
+ul li {
+  margin-left: 1.5rem;
+  margin-top: 4px;
+}
+.cons::before {
+  content: "✘";
+  color: #f10808;
+}
+.banner3 {
+  width: auto;
+  height: 650px;
+  object-fit: cover;
+  margin: 0 auto;
+  display: flex;
+}
+.image-wrapper {
+  width: 1920px;
+  height: 650px;
+  object-fit: cover;
+  margin-bottom: 110rem;
+}
+.banner1 {
+  width: 1920px;
+  height: auto;
+}
+.banner2 {
+  width: auto;
+  height: 650px;
+}
